# gnafer

./: .dockerignore  .env  .env.example  .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  TODO.md  docker-compose.supabase.yml  docker-compose.worker.yml  docker-compose.yml  input.txt  pyproject.toml  todo-complete.md
.github/workflows/: ci.yml
data/: Authority_Code_STREET_TYPE_AUT_psv.psv  GNAF_CORE.csv
sql/: schema.sql  supabase_schema.sql
src/: api.py  cli.py  config.py  ingest.py  listings_llm_verifier.py  listings_pipeline.py  llm_parser.py  llm_verifier.py  main.py  matcher.py  models.py  observability.py  parser.py  simple_parser.py  supabase_client.py  supabase_pipeline.py  trigram_matcher.py  utils.py
tests/: test_api.py  test_api_supabase.py  test_match_integration.py  test_matcher.py  test_parser.py  test_rescore.py  test_supabase_client.py  test_supabase_integration.py
