[project]
name = "gnafer"
version = "0.1.0"
description = "High-performance local Australian geocoder"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "psycopg2-binary>=2.9.9",
    "ollama>=0.1.9",
    "pydantic>=2.7.1",
    "pandas>=2.2.2",
    "tqdm>=4.66.4",
    "python-json-logger>=2.0.7",
    "logtail-python>=0.2.19",
    "python-dotenv>=1.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
