[project]
name = "gnafer"
version = "0.1.0"
description = "High-performance local Australian geocoder"
readme = "README.md"
requires-python = ">=3.12"
scripts = { gnafer = "src.cli:main" }
dependencies = [
    "psycopg2-binary>=2.9.9",
    "ollama>=0.1.9",
    "pydantic>=2.7.1",
    "pydantic-settings>=2.0.0",
    "pandas>=2.2.2",
    "tqdm>=4.66.4",
    "python-json-logger>=2.0.7",
    "logtail-python>=0.2.19",
    "python-dotenv>=1.0.1",
    "fastapi>=0.136.1",
    "uvicorn>=0.46.0",
    "python-multipart>=0.0.27",
    "typer>=0.15.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=6.0.0",
    "httpx>=0.27.0",
    "ruff>=0.11.0",
    "mypy>=1.15.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

# ---------------------------------------------------------------------------
# Ruff — linting & formatting
# ---------------------------------------------------------------------------

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",   # line too long — handled by formatter
    "SIM108", # ternary operator — readability preference
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011", "SIM300"]
"src/cli.py" = ["B008"]

# ---------------------------------------------------------------------------
# Mypy — type checking
# ---------------------------------------------------------------------------

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
ignore_missing_imports = true  # psycopg2, ollama, logtail lack stubs
